get methods long term goal
